# for display continuity sake please use 2 spaces instead of tabs
2015-01-21 Giuseppe Aruta
  * Upgraded Sextante PlugIn
  * Substituted ExportEnvelopeAsGeometryPlugIn Raster plugIn with
    more general ExportLayerableEnvelopeAsGeometryPlugIn 

2015-01-16 bertaz
  * TIFF rasters: replaced code for reading TIFF tags with
  * Apache Commons Imaging functions
  
2015-01-19 Giuseppe Aruta 
  * Add modified "palette" icon with semitransparency to Style plugins
  * New icons to copy and paste style plugins
  
2015-01-16 bertaz
  * TIFF rasters: added ability to read statistics saved as
  * GDAL_METADATA TIFF tag

2015_01_15 Giuseppe Aruta 
  * Extended "Zoom To Scale" PlugIn to any layerable
  * Add a "Style" plugin to WMS Layer dialog. 
    Currently only Visibility by scale is available
 
2015-01-15 bertaz
  * Fixed WarpImageToFence plug-in. Now the plug-in creates a new, warped, raster.
  
2015_01_15 Giuseppe Aruta 
  * Add on Layer menu "Export layer envelope as geometry" which 
    exports the envelope of any type of layer supported by OpenJUMP (Layer.class,
    ReferencedImageStyle.class, WMSLayer.class, WFSLayer.class,
    RasterImageLayer.class) as geometry. Layer name, layer datasource (if any)
    and CRS (only for WMS and WFS) are saved as layer attributes
 

2015-01-04 Giuseppe Aruta Modified layerable tooltip 
  * Check if layerable has datasource and distinguish between 
    Layer.class, ReferencedImageStyle.class
    WMSLayer.class, WFSLayer.class and RasterImageLayer.class
    
2015-01-12 bertaz
  * Reworked Sextante Raster Image handling:
    - support for loading only the visible part of TIFF files;
    - support for TIFF files overviews and subsampling;
    - support for external .aux.xml statistics file;
    - centralized symbology.
    
2015-01-07 ede
  * fix "OpenJump NB 4256 - Bug on opening Option Dialog and clicking on 
    "OK" button. The panel freezes." reported by Peppe

2015-01-04 ede