@@ -1805,6 +1805,7 @@ ui.MenuNames.VIEW = View
 ui.MenuNames.VIEW.MAP_DECORATIONS = Map Decorations
 ui.MenuNames.WINDOW = Window
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Synchronization
+ui.MenuNames.RASTER.VECTORIALIZE = Vectorialize
 ui.MenuNames.ZOOM = Zoom
 ui.MultiInputDialog.description-goes-here = description goes here.
 ui.MultiInputDialog.images-goes-here = image goes here.
