@@ -1829,6 +1829,7 @@ ui.MenuNames.VIEW=N\u00E4yt\u00E4
 ui.MenuNames.VIEW.MAP_DECORATIONS=Kartan lis\u00E4osat
 ui.MenuNames.WINDOW=Ikkuna
 ui.MenuNames.WINDOW.SYNCHRONIZATION=Synkronointi
+ui.MenuNames.RASTER.VECTORIALIZE = \#T\: Vectorialize
 ui.MenuNames.ZOOM=Kohdista
 ui.MultiInputDialog.description-goes-here=kuvaus menee t\u00E4nne
 ui.MultiInputDialog.images-goes-here=kuva menee t\u00E4nne
