@@ -1776,6 +1776,7 @@ ui.MenuNames.VIEW = Vue
 ui.MenuNames.VIEW.MAP_DECORATIONS = El\u00E9ments d'habillage
 ui.MenuNames.WINDOW = Fen\u00EAtre
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Synchronisation
+ui.MenuNames.RASTER.VECTORIALIZE = \#T\: Vectorialize
 ui.MenuNames.ZOOM = Zoom
 ui.MultiInputDialog.description-goes-here = description
 ui.MultiInputDialog.images-goes-here = image
