@@ -1800,6 +1800,7 @@ ui.MenuNames.VIEW=Vista
 ui.MenuNames.VIEW.MAP_DECORATIONS=Elementi decorativi
 ui.MenuNames.WINDOW=Finestra
 ui.MenuNames.WINDOW.SYNCHRONIZATION=Sincronizza
+ui.MenuNames.RASTER.VECTORIALIZE = Vettorializza
 ui.MenuNames.ZOOM=Zoom
 ui.MultiInputDialog.description-goes-here=descrizione
 ui.MultiInputDialog.images-goes-here=immagine
