@@ -1769,6 +1769,7 @@ ui.MenuNames.VIEW = \u8868\u793A
 ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = \u30A6\u30A3\u30F3\u30C9\u30FC
 ui.MenuNames.WINDOW.SYNCHRONIZATION = \u540C\u671F\u5316
+ui.MenuNames.RASTER.VECTORIALIZE = \#T\: Vectorialize
 ui.MenuNames.ZOOM = \#T\:Zoom
 ui.MultiInputDialog.description-goes-here = \u8A18\u8FF0\u304C\u3053\u3053\u306B\u304F\u308B.
 ui.MultiInputDialog.images-goes-here = \u753B\u50CF\u304C\u3053\u3053\u306B\u304F\u308B.
