@@ -2673,6 +2673,7 @@ ui.MenuNames.VIEW = \u0d26\u0d43\u0d36\u0d4d\u0d2f\u0d02
 ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = \u0d35\u0d3f\u0d28\u0d4d\u200d\u0d21\u0d4b 
 ui.MenuNames.WINDOW.SYNCHRONIZATION = \u0d15\u0d3e\u0d32\u0d2a\u0d4d\u0d2a\u0d46\u0d3e\u0d30\u0d41\u0d24\u0d4d\u0d24\u0d2e\u0d41\u0d23\u0d4d\u0d1f\u0d3e\u0d35\u0d41\u0d15 
+ui.MenuNames.RASTER.VECTORIALIZE = \#T\: Vectorialize
 ui.MenuNames.ZOOM = \#T\:
 #T:ui.MenuNames.ZOOM = Zoom
 ui.MultiInputDialog.description-goes-here = \u0d35\u0d3f\u0d35\u0d30\u0d23\u0d02 \u0d0e\u0d35\u0d3f\u0d1f\u0d46 \u0d24\u0d41\u0d1f\u0d19\u0d4d\u0d19\u0d41\u0d28\u0d4d\u0d28\u0d41.
