@@ -2024,6 +2024,7 @@ ui.MenuNames.VIEW = \u0c35\u0c4d\u0c2f\u0c42
 ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = \u0c35\u0c3f\u0c28\u0c4d\u0c21\u0c4b 
 ui.MenuNames.WINDOW.SYNCHRONIZATION = Synchronization
+ui.MenuNames.RASTER.VECTORIALIZE = \#T\: Vectorialize
 ui.MenuNames.ZOOM = \#T\:
 #T:ui.MenuNames.ZOOM = Zoom
 ui.MultiInputDialog.description-goes-here = description goes here.
