@@ -1901,6 +1901,7 @@ ui.MenuNames.VIEW = \u67e5\u770b
 ui.MenuNames.VIEW.MAP_DECORATIONS = \#T\:Map Decorations
 ui.MenuNames.WINDOW = \u7a97\u53e3
 ui.MenuNames.WINDOW.SYNCHRONIZATION = \u540c\u6b65
+ui.MenuNames.RASTER.VECTORIALIZE = \#T\: Vectorialize
 ui.MenuNames.ZOOM = \#T\:
 #T:ui.MenuNames.ZOOM = Zoom
 ui.MultiInputDialog.description-goes-here = \u4ecb\u7ecd\u653e\u5728\u8fd9\u91cc\u3002
